--- a/index.html
+++ b/index.html
@@ -1463,6 +1463,7 @@
                             //  $("#f_product_file").focus();
                             return;
                         }
+                        console.log($("#upload-preview").html());
                         console.log("pop-info4");
                         break;
                     
