--- a/index.html
+++ b/index.html
@@ -489,11 +489,11 @@
                                 </dl>
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="f_product_appliances">구독 중인 제품이 있을 시 제품명을 입력해주세요. <span class="txt-sm">(선택)</span></label>
+                                        <label for="f_product_appliances_subscribe">구독 중인 제품이 있을 시 제품명을 입력해주세요. <span class="txt-sm">(선택)</span></label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="input-wrap count">
-                                            <input type="text" name="f_product_appliances" value=""  id="f_product_appliances"  placeholder="예시) 정수기, 안마의자, 에어컨, 식기세척기 등">
+                                            <input type="text" name="f_product_appliances" value=""  id="f_product_appliances_subscribe"  placeholder="예시) 정수기, 안마의자, 에어컨, 식기세척기 등">
                                         </div>
                                     </dd>
                                 </dl>
@@ -607,11 +607,11 @@
                                     <dd class="conts">
                                         <div class="select-list-wrap">
                                             <span class="chk-wrap">
-                                                <input type="checkbox" id="serviceChk2-1" name="f_main_platform" value="">
+                                                <input type="checkbox" id="serviceChk2-1" name="f_main_platform" value="1">
                                                 <label for="serviceChk2-1">인스타그램</label>
                                             </span>
                                             <span class="chk-wrap">
-                                                <input type="radio" id="serviceChk2-2" name="f_main_platform" value="">
+                                                <input type="checkbox" id="serviceChk2-2" name="f_main_platform" value="2">
                                                 <label for="serviceChk2-2">유튜브</label>
                                             </span>
                                         </div>
@@ -1335,6 +1335,7 @@
                     } else {
                         preview.classList.remove("active");
                     }
+                    fileInput.value = '';
                 });
             },
 
@@ -1362,6 +1363,7 @@
                     // 모든 파일이 삭제되었을 경우 스타일 제거
                     if (preview.children.length === 0) {
                         preview.classList.remove("active");
+                        dataTransfer.clearData();
                     }
                 });
             }
@@ -1454,17 +1456,14 @@
                             //  $("#subscribeChk1-1").focus();
                             return;
                         }
-                        console.log("pop-info3");
                         break;
                     case "pop-info4":
                             
-                        if( $("#upload-preview").html() == "") {
+                        if( $("#upload-preview").html().trim() == "") {
                             jsErrorMessagePrint("이미지를 첨부해 주세요.");
                             //  $("#f_product_file").focus();
                             return;
                         }
-                        console.log($("#upload-preview").html());
-                        console.log("pop-info4");
                         break;
                     
                     case "pop-info5":
@@ -1526,7 +1525,6 @@
                             //  $("#hopeChk1-1").focus();
                             return;
                         }
-                        console.log("pop-info5");
                         break;
                     case "pop-info6":
                         if( !$("input[name='f_sub_course']:checked").val() ) {
@@ -1541,12 +1539,10 @@
                         }
                         break;
                     case "pop-info7":
-                        console.log("pop-info7");
                         return;
                         break;
                     case "pop-info8":
                         jsFormSubmit();
-                        console.log("pop-info8");
                         return;
                         break;
                     default :
