--- a/index.html
+++ b/index.html
@@ -287,30 +287,44 @@
                             </div>
 
                             <div class="agree-list-notice">
-                                <div class="tit">※ LG전자 앰버서더 3기 모집> 이벤트 참여 및 활동 유의사항</div>
+                                <div class="tit">※ <LG전자 앰버서더 3기 모집> 이벤트 참여 및 활동 유의사항</div>
                                 <ul class="agree-txt">
-                                    <li>LG전자 앰버서더 선정, 발표 및 운영 활동은 당사 사정에 따라 별도의 고지 없이 변경 또는 중단될 수 있습니다.</li>                            
-                                    <li>본 이벤트는 Jammy 회원가입 및 로그인 후 참여 가능하며, 이벤트 참여 후 Jammy 회원 탈퇴 시 선정이 취소될 수 있습니다</li>
-                                    <li>만 19세 미만 고객님의 경우 LG전자 앰버서더 지원이 불가합니다..</li>
-                                    <li>타인의 명의 도용 등 비정상적이거나 불법적인 방법으로 참여하신 경우 LG전자 앰버서더 선정이 취소될 수 있습니다.</li>
-                                    <li>개인정보 수집 활용 동의 시에만 지원 완료됩니다. </li>
-                                    <li>LG전자 앰버서더 활동은 실제 보유중인 LG전자 제품을 활용한 영상 콘텐츠 제작이 필수적이며,<br>제품 보유 여부 확인이 불가할 경우 선정이 취소될 수 있습니다.</li>
-                                    <li>LG전자 앰버서더로 최종 선정되신 분들에 한하여 지원 시 작성하신 휴대폰 번호로 개별 연락드릴 예정입니다.<br> 최초 연락 이후 3일간 연락이 되지 않거나 3회 이상 연락에 회신하지 않을 경우 당첨이 취소됩니다.</li>
-                                    <li>LG전자 앰버서더는 내부 선발 기준에 따라 선정되며, 선정 기준에 대한 별도의 답변은 제공하지 않습니다.</li>
+                                    <li>LG전자 앰버서더 선정, 발표 및 운영 활동은 당사 사정에 따라 별도의 고지 없이 변경 또는 중단될 수 있습니다.</li>
+                                    <li>본 이벤트는 Jammy 회원가입 및 로그인 후 참여 가능하며, 이벤트 참여 후 Jammy 회원 탈퇴 시 선정이 취소될 수 있습니다.</li>
+                                    <li>만19세 미만 고객님의 경우 LG전자 앰버서더 지원이 불가합니다.</li>
+                                    <li>타인의 명의도용 등 비정상적이거나 불법적인 방법으로 참여하신 경우 LG전자 앰버서더 선정이 취소될 수 있습니다.</li>
+                                    <li>개인정보 수집 활용 동의 시에만 지원 완료됩니다.</li>
+                                    <li>LG전자 앰버서더 활동은 실제 보유중인 LG전자 제품을 활용한 영상콘텐츠제작이 필수적이며,<br>
+                                    제품 보유 여부 확인이 불가할 경우 선정이 취소될 수 있습니다.</li>
+                                    <li>LG전자 앰버서더로 최종 선정되신 분들에 한하여 지원 시 작성하신 휴대폰 번호로 개별 연락드릴 예정입니다.<br>
+                                    최초 연락 이후 3일간 연락이 되지 않거나 3회 이상 연락에 회신하지 않을 경우 선정이 취소됩니다.</li>
+                                    <li>LG전자앰버서더는 내부 선발 기준에 따라 선정되며, 선정 기준에 대한 별도의 답변은 제공하지 않습니다.</li>
                                     <li>잘못된 개인정보 제공으로 인해 선발 안내 메시지를 수신하지 못한 경우 당사에서 책임지지 않습니다.</li>
-                                    <li>LG전자 앰버서더 활동의 상세 프로그램은 최종 인원 선정 이후 별도 안내해드릴 예정입니다. (LG전자 앰버서더 전용 카카오톡 채널 추가 필수)</li>
-                                    <li>LG전자 앰버서더 활동 중 제작된 콘텐츠는 ㈜LG전자의 마케팅 채널에 2차 가공되어 활용될 수 있으므로 원본 영상 납품을 요청 드릴 수 있으며 대상자는 영상 납품의 의무가 있습니다.</li>
-                                    <li>경품 당첨자는 이벤트 종료 후 지원서에 작성하신 휴대폰 번호로 경품 지급 관련 문자 발송 예정입니다. 잘못된 개인 정보 입력으로 인해 당첨자에게 연락이 불가하거나 오발송 또는 반송될 경우 재발송되지 않으며 당사에서 책임지지 않습니다.</li>
-                                    <li>경품은 당사의 사정에 의해 사전 공지 없이 변경될 수 있으며, 발표일과 발송 일정은 당사 사정에 의해 변경되거나 지연될 수 있습니다.</li>
-                                    <li>경품 이미지는 이해를 돕기 위한 것으로 실제와 다를 수 있습니다.</li>
-                                    <li>이벤트를 통해 수집된 개인정보는 수집 목적에 따라서만 활용되며, 개인정보 보호 정책에 따라 처리됩니다.</li>
-                                    <li>개인정보 수집/이용에 동의 및 거부할 수 있으며, 이벤트 참여(LG전자 앰버서더 선발, 경품 당첨, 경품 수령 등)에 제한이 있을 수 있습니다.</li>
-                                    <li>LG전자 앰버서더 지원 시 작성한 내용은 본 이벤트 운영과 관련된 업무에만 활용될 예정이며, 본 이벤트 관련 홍보/운영/관리 시 추가 동의 없이 활용될 수 있습니다.</li>
-                                    <li>수집된 개인정보는 당첨자 확인 및 경품 발송 용도로만 사용되며 이벤트 종료일로부터 3개월까지 보유 후 폐기됩니다.</li>
+                                    <li>LG전자 앰버서더 활동의 상세 프로그램은 최종 인원 선정 이후 별도 안내해드릴 예정입니다.<br>
+                                    (LG전자 앰버서더 전용 카카오톡 채널 추가 필수)</li>
+                                    <li>LG전자앰버서더 활동 중 제작된 콘텐츠는 (주)LG전자의 마케팅 채널에 2차 가공되어 활용될 수 있으므로<br>원본영상 납품을 요청 드릴 수 있으며 대상자는 영상 납품의 의무가 있습니다.</li>
+                                    <li>LG전자앰버서더 지원 시 작성한 내용은 본 이벤트 운영과 관련된 업무에만 활용될 예정이며,<br>
+                                    본 이벤트 관련 홍보/운영/관리 시 추가 동의 없이 활용될 수 있습니다.</li>
                                     <li>LG전자 앰버서더 선정자들에게는 활동을 위해 개인 정보를 추가 수집할 수 있습니다.</li>
-                                    <li>LG전자 앰버서더로 선정 후 활동 기간 중 타 전자/가전 제품 브랜드 홍보 콘텐츠 업로드가 불가하며 적발 시 자격과 리워드가 박탈 될 수 있습니다.</li>
-                                    <li>LG전자 앰버서더로 활동 중 사회적으로 물의를 일으킬 경우 제공된 리워드 및 자격이 박탈 될 수 있습니다.</li>
-                                    <li>이외 추가 문의 사항은 lge.ambassador.cs@gmail.com로 문의 바랍니다. </li>
+                                    <li>LG전자 앰버서더로 선정 후 활동 기간 중 타 전자/가전 제품 브랜드 홍보 콘텐츠 업로드가 불가하며<br> 적발시 자격과 리워드가 박탈 될 수 있습니다.</li>
+                                </ul>
+                                
+                                <div class="tit">※<LG전자 찐팬을 제보해주세요!> 이벤트 참여 유의사항</div>
+                                <ul class="agree-txt">
+                                    <li>본 이벤트의 경우 반드시 본인이 직접 촬영·제작한 콘텐츠를 본인 명의의 계정에 업로드해야 합니다.</li>
+                                    <li>이벤트 참여 시 타인의 콘텐츠를 무단 사용하거나 명의를 도용하는 경우 당첨이 취소됩니다.</li>
+                                    <li>본인 외 타인이 영상·사진에 노출되는 경우, 사전에 해당 인물의 동의를 구한 것으로 간주하며,<br>
+                                    제한법령을 위반하거나 사회적으로 부적절한 방법으로 이벤트에 참여한 경우 심사제외 및 당첨이 취소될 수 있습니다.</li>
+                                    <li>본 이벤트에 제출된 콘텐츠는 (주)LG전자의 마케팅 채널에 2차 가공되어 활용될 수 있으므로<br>
+                                    원본영상 납품을 요청 드릴 수 있으며 대상자는영상 납품의 의무가 있습니다.</li>
+                                    <li>모든 이벤트의 경품 당첨자는 이벤트 종료 후 지원서에 작성하신 휴대폰 번호로 경품 지급 관련 문자 발송 예정입니다.<br>잘못된 개인정보 입력으로 인해 당첨자에게 연락이 불가하거나 오발송 또는 반송될 경우 재발송되지 않으며 당사에서<br>책임지지 않습니다.</li>
+                                    <li>모든 이벤트의 경품은 당사의 사정에 의해 사전 공지 없이 변경될 수 있으며,<br>
+                                    발표일과 발송 일정은 당사 사정에 의해 변경되거나 지연될 수 있습니다.</li>
+                                    <li>모든 이벤트의 경품 이미지는 이해를 돕기 위한 것으로 실제와 다를 수 있습니다.</li>
+                                    <li>이벤트를 통해 수집된 개인정보는 수집 목적에 따라서만 활용되며, 개인정보보호정책에 따라 처리됩니다.</li>
+                                    <li>개인정보 수집/이용에 동의 및 거부할 수 있으며, 이벤트 참여(LG전자앰버서더 선정, 경품 당첨, 경품 수령 등)에 제한이<br> 있을 수 있습니다.</li>
+                                    <li>수집된 개인정보는 당첨자 확인 및 경품발송 용도로만 사용되며 이벤트 종료일로부터 3개월까지 보유 후 폐기됩니다.</li>
+                                    <li>이외 추가 문의 사항은 Ige.ambassador.cs@gmail.com로 문의 바랍니다.</li>
                                 </ul>
                             </div>
                             <div class="agree-input">
