--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <!-- 영상  -->
                     <div id="ambassdor-ani" class="ambassdor-ani">
                         <div class="video-container">
-                             <video id="main-video-pc" autoplay loop muted playsinline preload="auto">
+                            <video id="main-video-pc" autoplay loop muted playsinline preload="auto">
                                 <source src="./pc/video/main_visual.mp4" type="video/mp4">
                             </video>
                             <video id="main-video-mo" autoplay loop muted playsinline preload="auto">
@@ -170,20 +170,17 @@
                     <div class="video-lay">
                         <div class="video-container">
                             <video autoplay loop muted playsinline>
-                              <source src="./pc/video/fan_video1.mp4" type="video/mp4">
-                              Your browser does not support the video tag.
+                                <source src="./pc/video/fan_video1.mp4" type="video/mp4"> Your browser does not support the video tag.
                             </video>
                         </div>
                         <div class="video-container">
                             <video autoplay loop muted playsinline>
-                              <source src="./pc/video/fan_video2.MOV" type="video/mp4">
-                              Your browser does not support the video tag.
+                                <source src="./pc/video/fan_video2.MOV" type="video/mp4"> Your browser does not support the video tag.
                             </video>
                         </div>
                         <div class="video-container">
                             <video autoplay loop muted playsinline>
-                              <source src="./pc/video/fan_video3.MP4" type="video/mp4">
-                              Your browser does not support the video tag.
+                                <source src="./pc/video/fan_video3.MP4" type="video/mp4"> Your browser does not support the video tag.
                             </video>
                         </div>
                     </div>
@@ -196,7 +193,7 @@
 
 				<div class="section sec_8" id="sec8">
 					<div class="layout">
-                         <picture class="img">
+                        <picture class="img">
                             <source srcset="pc/images/sec_07.png" media="(min-width: 769px)">
                             <img src="mo/images/sec_07.png" alt="">
                         </picture>
@@ -206,7 +203,7 @@
 
                 <div class="section sec_9" id="sec9">
 					<div class="layout">
-                         <picture class="img">
+                        <picture class="img">
                             <source srcset="pc/images/sec_08.png" media="(min-width: 769px)">
                             <img src="mo/images/sec_08.png" alt="">
                         </picture>
@@ -215,7 +212,7 @@
 
                 <div class="section sec_10" id="sec10">
 					<div class="layout">
-                         <picture class="img">
+                        <picture class="img">
                             <source srcset="pc/images/sec_09.png" media="(min-width: 769px)">
                             <img src="mo/images/sec_09.png" alt="">
                         </picture>
@@ -407,7 +404,7 @@
                                         <div class="input-wrap">
                                             <input type="text" id="f_user_nicknane" name="f_user_nicknane" value="" maxlength="150" placeholder="닉네임/이름을 입력해 주세요(ex. LG찐팬/김엘지)">
                                         </div>
-                                         <ul class="bullet-list">
+                                        <ul class="bullet-list">
                                             <li class="b-txt">별도의 추천인이 없을 경우 ‘없음’으로 기입해주세요.</li>
                                         </ul>
                                     </dd>
@@ -1059,7 +1056,7 @@
                     </section>
                     <!--// 07. 제출하기 -->
 
-                     <!-- 08. 지원감사 -->
+                    <!-- 08. 지원감사 -->
                     <section class="info-cont-wrap" id="pop-info8">
                         <header class="info-header2">
                             <a href="#" class="modal-close"><span class="blind">닫기</span></a>
@@ -1085,8 +1082,8 @@
             <div class="inner">
                 <!-- Popup Contents -->
                 <div class="pop-conts">
-                     <!-- 09. LG전자 가전 구독 -->
-                     <section class="info-cont-wrap active" id="pop-info9">
+                    <!-- 09. LG전자 가전 구독 -->
+                    <section class="info-cont-wrap active" id="pop-info9">
                         <main>
                             <div class="submit-done-box mgt30">
                                 <i class="icon-info-submit"></i>
@@ -1115,13 +1112,13 @@
             <div class="inner">
                 <!-- Popup Contents -->
                 <div class="pop-conts">
-                     <section class="info-cont-wrap active" id="pop-sns">
+                    <section class="info-cont-wrap active" id="pop-sns">
                         <header class="info-header">
                             <div class="title-em">공유하기</div>
                             <a href="#" class="modal-close"><span class="blind">닫기</span></a>
                         </header>
                         <main>
-                           <ul class="sns-list">
+                            <ul class="sns-list">
                                 <li><a href="javascript:fn_kakao_share();" class="kakao"><i></i><span>카카오톡</span></a></li> 
                                 <li><a href="javascript:fn_f_share_link();" class="facebook"><i></i><span>페이스북</span></a></li> 
                                 <li><a href="javascript:fn_link_share();" class="clipboard"><i></i><span>URL복사</span></a></li> 
@@ -1249,7 +1246,6 @@
             handleTabFixed();
             $(window).on('scroll resize', handleTabFixed);
         })(jQuery);
-
 
         //모달 열기
         function modal(id){
@@ -1568,7 +1564,6 @@
                         console.log("unknown");
                         break;
                 }
-
 
                 if (nextSection && nextSection.classList.contains('info-cont-wrap')) {
                     // 현재 섹션 숨기기
