--- a/index.html
+++ b/index.html
@@ -666,12 +666,12 @@
                                                         <label for="followChk1-5">1만 명 이상</label>
                                                     </span>
                                                 </li>
-                                                <li class="lists">
+                                                <!-- <li class="lists">
                                                     <span class="rdo-wrap">
                                                         <input type="radio" id="followChk1-6" name="f_main_ig_followers" value="6" disabled>
                                                         <label for="followChk1-6">해당 없음</label>
                                                     </span>
-                                                </li>
+                                                </li> -->
                                             </ul>
                                         </div>
                                     </dd>
@@ -724,12 +724,12 @@
                                                         <label for="ytFollowChk1-5">1만 명 이상</label>
                                                     </span>
                                                 </li>
-                                                <li class="lists">
+                                                <!-- <li class="lists">
                                                     <span class="rdo-wrap">
                                                         <input type="radio" id="ytFollowChk1-6" name="f_main_yt_followers" value="5" disabled>
                                                         <label for="ytFollowChk1-6">해당 없음</label>
                                                     </span>
-                                                </li>
+                                                </li> -->
                                             </ul>
                                         </div>
                                     </dd>
