--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@
                                         <div class="input-wrap">
                                             <input type="text" id="f_user_nicknane" name="f_user_nicknane" value="" maxlength="150" placeholder="닉네임/이름을 입력해 주세요(ex. LG찐팬/김엘지)">
                                         </div>
-                                        <ul class="bullet-list">
+                                        <!-- <ul class="bullet-list">
                                             <li class="b-txt">별도의 추천인이 없을 경우 ‘없음’으로 기입해주세요.</li>
-                                        </ul>
+                                        </ul> -->
                                     </dd>
                                 </dl>
                             </div>
