--- a/index.html
+++ b/index.html
@@ -1261,15 +1261,18 @@
 
         //모달 열기
         function modal(id){
-            $("#" + id).fadeIn()
+            $("#" + id).fadeIn();
+            // 팝업창 열릴 때 body 스크롤 비활성화
+            $('body').addClass('modal-open');
         }
-        // modal('dialog3')
 
         //모달 닫기
         $('.modal-close').on('click', function(e){
             e.preventDefault();
             const modal = $(this).parents('.dialog');
             modal.fadeOut();
+            // 팝업창 닫힐 때 body 스크롤 다시 활성화
+            $('body').removeClass('modal-open');
         });
 
         function initForm() {
@@ -1583,6 +1586,12 @@
 
                     // 다음 섹션 보이기
                     nextSection.classList.add('active');
+
+                    // 팝업 스크롤을 제일 위로 올리기
+                    const popupMain = nextSection.querySelector('main');
+                    if (popupMain) {
+                        popupMain.scrollTop = 0;
+                    }
                 }
             });
         });
@@ -1717,6 +1726,12 @@
 
                     // 이전 섹션 보이기
                     prevSection.classList.add('active');
+
+                    // 팝업 스크롤을 제일 위로 올리기
+                    const popupMain = prevSection.querySelector('main');
+                    if (popupMain) {
+                        popupMain.scrollTop = 0;
+                    }
                 }
             });
         });
