--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                                 <!-- 이메일추천인 닉네임/이름주소 -->
                                 <dl class="forms">
                                     <dt class="tit">
-                                        <label for="f_user_nicknane" class="">추천인 닉네임/이름</label>
+                                        <label for="f_user_nicknane" class="">추천인 닉네임/이름(선택)</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="input-wrap">
