--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
                     <div class="btn-wraps">
                         <a class="button-report" href="https://forms.gle/pNH18iDQZxvnjNW49" target="_blank"><span class="blind">찐팬 제보하기</span></a>
-                        <a class="button-share" href="javascrpt:modal('dialog3');"><span class="blind">내 주변 찐팬에게 공유하기</span></a>
+                        <a class="button-share" href="javascript:modal('dialog3');"><span class="blind">내 주변 찐팬에게 공유하기</span></a>
                     </div>
 				</div>
 
