--- a/index.html
+++ b/index.html
@@ -1447,11 +1447,11 @@
                             //  $("#f_user_mail").focus();
                             return;
                         }
-                        if( $("#f_user_nicknane").val().trim() == "") {
-                            jsErrorMessagePrint("닉네임을 정확하게 입력해 주세요");
-                            //  $("#f_user_mail").focus();
-                            return;
-                        }
+                        // if( $("#f_user_nicknane").val().trim() == "") {
+                        //     jsErrorMessagePrint("닉네임을 정확하게 입력해 주세요");
+                        //     //  $("#f_user_mail").focus();
+                        //     return;
+                        // }
                         break;
                     case "pop-info3":
 
