--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                         <main>
                             <div class="mid-title">
                                 <div class="tit">메인 SNS 채널</div>
-                                <div class="sub">앰버서더로 활동할 채널에 대해 소개해주세요.</div>
+                                <div class="sub">앰버서더로 활동할 채널에 대해 응답해주세요.</div>
                             </div>
                             <div class="form-wrap">
                                 <dl class="forms block-type">
