--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                             <div class="form-wrap">
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="serviceChk1-1">현재 LG전자 제품을 보유 중이신가요?</label>
+                                        <label for="">현재 LG전자 제품을 보유 중이신가요?</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="select-list-wrap">
@@ -1454,7 +1454,6 @@
                         // }
                         break;
                     case "pop-info3":
-
                         if( $("#serviceChk1-1").is(":checked") == false &&  $("#serviceChk1-2").is(":checked") == false) {
                             jsErrorMessagePrint("현재 LG전자 제품을 선택해 주세요.");
                             //  $("#serviceChk1-1").focus();
@@ -1485,19 +1484,17 @@
                                 return;
                             }
                         }
-
                         break;
                     case "pop-info4":
-
-                        if( $("#upload-preview").html().trim() == "") {
-                            jsErrorMessagePrint("이미지를 첨부해 주세요.");
-                            //  $("#f_product_file").focus();
-                            return;
+                        if( $("#serviceChk1-1").is(":checked") == true) {
+                            if( $("#upload-preview").html().trim() == "") {
+                                jsErrorMessagePrint("이미지를 첨부해 주세요.");
+                                //  $("#f_product_file").focus();
+                                return;
+                            }
                         }
                         break;
-
                     case "pop-info5":
-
                         if( !$("input[name='f_main_platform']:checked").val() ) {
                             jsErrorMessagePrint("활동 중인 SNS 채널을 선택해 주세요.");
                             //  $("#serviceChk2-1").focus();
