--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                                 <!-- 이메일추천인 닉네임/이름주소 -->
                                 <dl class="forms">
                                     <dt class="tit">
-                                        <label for="f_user_nicknane" class="">추천인 닉네임/이름(선택)</label>
+                                        <label for="f_user_nicknane" class="">추천인 닉네임/이름<span class="txt-sm">(선택)</span></label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="input-wrap">
@@ -490,7 +490,7 @@
                                 </dl>
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="f_product_appliances_subscribe">구독 중인 제품이 있을 시 제품명을 입력해주세요. <span class="txt-sm">(선택)</span></label>
+                                        <label for="f_product_appliances_subscribe">구독 중인 제품이 있을 시 제품명을 입력해주세요.</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="input-wrap count">
@@ -891,7 +891,7 @@
                             <div class="form-wrap">
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="serviceChk2-1">서브 채널 플랫폼(선택)</label>
+                                        <label for="serviceChk2-1">서브 채널 플랫폼<span class="txt-sm">(선택)</span></label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="select-list-wrap">
@@ -924,7 +924,7 @@
                                 </dl>
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="f_sub_url">서브 계정 URL(선택)</label>
+                                        <label for="f_sub_url">서브 계정 URL<span class="txt-sm">(선택)</span></label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="input-wrap">
