--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                             <div class="form-wrap">
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="">활동 중인 SNS 채널을 모두 선택해주세요. (복수 응답 가능)</label>
+                                        <label for="" class="depth2">활동 중인 SNS 채널을 모두 선택해주세요. (복수 응답 가능)</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="select-list-wrap">
@@ -620,7 +620,7 @@
                                 </dl>
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="f_main_ig_url">인스타그램 계정 URL</label>
+                                        <label for="f_main_ig_url" class="depth2">인스타그램 계정 URL</label>
                                     </dt>
                                     <dd class="noti">인스타그램&유튜브 중 하나의 채널만 보유하고 있어도 지원 가능하나, 최종 선발 시 두 채널 모두 운영 필수</dd>
                                     <dd class="conts">
@@ -631,7 +631,7 @@
                                 </dl>
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="followChk1-1">인스타그램 팔로워 수</label>
+                                        <label for="" class="depth2">인스타그램 팔로워 수</label>
                                     </dt>
                                     <dd class="conts">
                                         <div id="" class="select-list-wrap">
@@ -679,7 +679,7 @@
 
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="f_main_yt_url">유튜브 채널 URL</label>
+                                        <label for="f_main_yt_url" class="depth2">유튜브 채널 URL</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="input-wrap">
@@ -689,7 +689,7 @@
                                 </dl>
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="ytFollowChk1-1">유튜브 구독자 수</label>
+                                        <label for="" class="depth2">유튜브 구독자 수</label>
                                     </dt>
                                     <dd class="conts">
                                         <div id="" class="select-list-wrap">
@@ -737,7 +737,7 @@
 
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="snsChk-1">채널 카테고리 (최대 2개 선택)</label>
+                                        <label for="" class="depth2">채널 카테고리 (최대 2개 선택)</label>
                                     </dt>
                                     <dd class="conts">
                                         <div id="" class="select-list-wrap">
@@ -818,7 +818,7 @@
 
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="f_main_concept">내 채널 컨셉에 대해 간단히 소개해주세요.(최대 50자)</label>
+                                        <label for="f_main_concept" class="depth2">내 채널 컨셉에 대해 간단히 소개해주세요.(최대 50자)</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="input-wrap count">
@@ -829,7 +829,7 @@
 
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="hopeChk1-1">희망하는 부문을 1개 선택해주세요.</label>
+                                        <label for="" class="depth2">희망하는 부문을 1개 선택해주세요.</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="select-list-wrap">
