--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                             <div class="form-wrap">
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="serviceChk2-1">서브 채널 플랫폼 <span class="txt-sm">(선택)</span></label>
+                                        <label for="" class="depth2">서브 채널 플랫폼 <span class="txt-sm">(선택)</span></label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="select-list-wrap">
@@ -924,7 +924,7 @@
                                 </dl>
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="f_sub_url">서브 계정 URL <span class="txt-sm">(선택)</span></label>
+                                        <label for="f_sub_url" class="depth2">서브 계정 URL <span class="txt-sm">(선택)</span></label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="input-wrap">
@@ -934,7 +934,7 @@
                                 </dl>
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="followChk1-1">LG전자 앰버서더를 알게 된 경로 (복수 응답 가능)</label>
+                                        <label for="" class="depth2">LG전자 앰버서더를 알게 된 경로 (복수 응답 가능)</label>
                                     </dt>
                                     <dd class="conts">
                                         <div id="" class="select-list-wrap">
