--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                                 </dl>
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="subscribeChk1-1">현재 ‘LG전자 가전 구독’ 서비스를 이용 중이신가요?</label>
+                                        <label for="">현재 ‘LG전자 가전 구독’ 서비스를 이용 중이신가요?</label>
                                     </dt>
                                     <dd class="noti">‘LG전자 가전 구독’이란? 원하는 가전에 편리한 케어 서비스까지 고객의 생활에 맞춰 자유롭게 선택할 수 있는 LG전자만의 라이프 맞춤 구독 서비스 입니다.</dd>
                                     <dd class="conts">
@@ -601,9 +601,9 @@
                                 <div class="sub">앰버서더로 활동할 채널에 대해 응답해주세요.</div>
                             </div>
                             <div class="form-wrap">
-                                <dl class="forms block-type">
+                                <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="" class="depth2">활동 중인 SNS 채널을 모두 선택해주세요. (복수 응답 가능)</label>
+                                        <label for="">활동 중인 SNS 채널을 모두 선택해주세요. (복수 응답 가능)</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="select-list-wrap">
@@ -618,9 +618,9 @@
                                         </div>
                                     </dd>
                                 </dl>
-                                <dl class="forms block-type">
+                                <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="f_main_ig_url" class="depth2">인스타그램 계정 URL</label>
+                                        <label for="f_main_ig_url">인스타그램 계정 URL</label>
                                     </dt>
                                     <dd class="noti">인스타그램&유튜브 중 하나의 채널만 보유하고 있어도 지원 가능하나, 최종 선발 시 두 채널 모두 운영 필수</dd>
                                     <dd class="conts">
@@ -629,9 +629,9 @@
                                         </div>
                                     </dd>
                                 </dl>
-                                <dl class="forms block-type">
+                                <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="" class="depth2">인스타그램 팔로워 수</label>
+                                        <label for="">인스타그램 팔로워 수</label>
                                     </dt>
                                     <dd class="conts">
                                         <div id="" class="select-list-wrap">
@@ -677,9 +677,9 @@
                                     </dd>
                                 </dl>
 
-                                <dl class="forms block-type">
+                                <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="f_main_yt_url" class="depth2">유튜브 채널 URL</label>
+                                        <label for="f_main_yt_url">유튜브 채널 URL</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="input-wrap">
@@ -687,9 +687,9 @@
                                         </div>
                                     </dd>
                                 </dl>
-                                <dl class="forms block-type">
+                                <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="" class="depth2">유튜브 구독자 수</label>
+                                        <label for="">유튜브 구독자 수</label>
                                     </dt>
                                     <dd class="conts">
                                         <div id="" class="select-list-wrap">
@@ -735,9 +735,9 @@
                                     </dd>
                                 </dl>
 
-                                <dl class="forms block-type">
+                                <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="" class="depth2">채널 카테고리 (최대 2개 선택)</label>
+                                        <label for="">채널 카테고리 (최대 2개 선택)</label>
                                     </dt>
                                     <dd class="conts">
                                         <div id="" class="select-list-wrap">
@@ -816,9 +816,9 @@
                                     </dd>
                                 </dl>
 
-                                <dl class="forms block-type">
+                                <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="f_main_concept" class="depth2">내 채널 컨셉에 대해 간단히 소개해주세요.(최대 50자)</label>
+                                        <label for="f_main_concept">내 채널 컨셉에 대해 간단히 소개해주세요.(최대 50자)</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="input-wrap count">
@@ -827,9 +827,9 @@
                                     </dd>
                                 </dl>
 
-                                <dl class="forms block-type">
+                                <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="" class="depth2">희망하는 부문을 1개 선택해주세요.</label>
+                                        <label for="">희망하는 부문을 1개 선택해주세요.</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="select-list-wrap">
@@ -889,9 +889,9 @@
                                 <div class="sub">활동 중인 서브 채널 보유하고 있는 경우에만 응답해주세요.</div>
                             </div>
                             <div class="form-wrap">
-                                <dl class="forms block-type">
+                                <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="" class="depth2">서브 채널 플랫폼 <span class="txt-sm">(선택)</span></label>
+                                        <label for="">서브 채널 플랫폼 <span class="txt-sm">(선택)</span></label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="select-list-wrap">
@@ -922,9 +922,9 @@
                                         </div>
                                     </dd>
                                 </dl>
-                                <dl class="forms block-type">
+                                <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="f_sub_url" class="depth2">서브 계정 URL <span class="txt-sm">(선택)</span></label>
+                                        <label for="f_sub_url">서브 계정 URL <span class="txt-sm">(선택)</span></label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="input-wrap">
@@ -932,9 +932,9 @@
                                         </div>
                                     </dd>
                                 </dl>
-                                <dl class="forms block-type">
+                                <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="" class="depth2">LG전자 앰버서더를 알게 된 경로 (복수 응답 가능)</label>
+                                        <label for="">LG전자 앰버서더를 알게 된 경로 (복수 응답 가능)</label>
                                     </dt>
                                     <dd class="conts">
                                         <div id="" class="select-list-wrap">
