--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <video id="main-video-pc" autoplay loop muted playsinline preload="auto">
                                 <source src="./pc/video/main_visual.mp4" type="video/mp4">
                             </video>
-                            <video id="main-video-mo" autoplay loop muted playsinline preload="auto">
+                            <video id="main-video-mo" poster="./mo/images/poster.jpg" autoplay loop muted playsinline preload="auto">
                                 <source src="./pc/video/main_visual_m.mp4" type="video/mp4">
                             </video>
                         </div>
