--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                 <!-- 이메일주소 -->
                                 <dl class="forms">
                                     <dt class="tit">
-                                        <label for="userEmail" class="">메일주소</label>
+                                        <label for="f_user_mail" class="">메일주소</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="input-wrap">
