--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                             <div class="form-wrap">
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="">현재 LG전자 제품을 보유 중이신가요?</label>
+                                        <label>현재 LG전자 제품을 보유 중이신가요?</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="select-list-wrap">
@@ -472,7 +472,7 @@
                                 </dl>
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="">현재 ‘LG전자 가전 구독’ 서비스를 이용 중이신가요?</label>
+                                        <label>현재 ‘LG전자 가전 구독’ 서비스를 이용 중이신가요?</label>
                                     </dt>
                                     <dd class="noti">‘LG전자 가전 구독’이란? 원하는 가전에 편리한 케어 서비스까지 고객의 생활에 맞춰 자유롭게 선택할 수 있는 LG전자만의 라이프 맞춤 구독 서비스 입니다.</dd>
                                     <dd class="conts">
@@ -532,7 +532,7 @@
                             <div class="form-wrap">
                                 <dl class="forms block-type">
                                     <dt class="tit">
-                                        <label for="">제품 사진 업로드</label>
+                                        <label>제품 사진 업로드</label>
                                     </dt>
                                     <dd class="mid-desc mg-left">
                                         보유 중인 LG전자 제품과 함께 시간을 보내고 있는 사진을 업로드해주세요.<br />
@@ -603,7 +603,7 @@
                             <div class="form-wrap">
                                 <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="">활동 중인 SNS 채널을 모두 선택해주세요. (복수 응답 가능)</label>
+                                        <label>활동 중인 SNS 채널을 모두 선택해주세요. (복수 응답 가능)</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="select-list-wrap">
@@ -631,7 +631,7 @@
                                 </dl>
                                 <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="">인스타그램 팔로워 수</label>
+                                        <label>인스타그램 팔로워 수</label>
                                     </dt>
                                     <dd class="conts">
                                         <div id="" class="select-list-wrap">
@@ -689,7 +689,7 @@
                                 </dl>
                                 <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="">유튜브 구독자 수</label>
+                                        <label>유튜브 구독자 수</label>
                                     </dt>
                                     <dd class="conts">
                                         <div id="" class="select-list-wrap">
@@ -737,7 +737,7 @@
 
                                 <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="">채널 카테고리 (최대 2개 선택)</label>
+                                        <label>채널 카테고리 (최대 2개 선택)</label>
                                     </dt>
                                     <dd class="conts">
                                         <div id="" class="select-list-wrap">
@@ -829,7 +829,7 @@
 
                                 <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="">희망하는 부문을 1개 선택해주세요.</label>
+                                        <label>희망하는 부문을 1개 선택해주세요.</label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="select-list-wrap">
@@ -891,7 +891,7 @@
                             <div class="form-wrap">
                                 <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="">서브 채널 플랫폼 <span class="txt-sm">(선택)</span></label>
+                                        <label>서브 채널 플랫폼 <span class="txt-sm">(선택)</span></label>
                                     </dt>
                                     <dd class="conts">
                                         <div class="select-list-wrap">
@@ -934,7 +934,7 @@
                                 </dl>
                                 <dl class="forms block-type depth2">
                                     <dt class="tit">
-                                        <label for="">LG전자 앰버서더를 알게 된 경로 (복수 응답 가능)</label>
+                                        <label>LG전자 앰버서더를 알게 된 경로 (복수 응답 가능)</label>
                                     </dt>
                                     <dd class="conts">
                                         <div id="" class="select-list-wrap">
